estilizando as sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,3 +76,46 @@ body {
   max-width: 500px;
   text-align: center;
 }
+
+/*--------------------------------------------------------------------------------*/
+
+.section {
+  padding: 8px;
+  width: 100%;
+  max-width: 450px;
+  margin: 50px auto;
+}
+
+.section__titulo {
+  font-family: "Poppins", sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  color: #87d0a6;
+  margin: 16px 0px;
+  text-align: center;
+}
+
+.projeto {
+  background-color: #3b3b3b;
+  padding: 8px;
+  margin: 16px 0px;
+  box-sizing: border-box;
+  border-radius: 3px;
+}
+
+.projeto__titulo {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  color: #87d0a6;
+  margin: 8px 0px;
+}
+
+.projeto__descricao {
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #f4f4f4;
+  margin: 8px 0;
+  text-align: justify;
+}
