--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,10 @@ body {
   border-radius: 50%; /*deixar o ícone redondo */
 }
 
+.icone--texto {
+  margin: 0 8px;
+}
+
 /*--------------------------------------------------------------------------------*/
 
 .main {
@@ -118,4 +122,25 @@ body {
   color: #f4f4f4;
   margin: 8px 0;
   text-align: justify;
+}
+
+/*--------------------------------------------------------------------------------*/
+
+.footer {
+  width: 100%;
+  height: 42px;
+  background-color: #87d0a6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+.footer__texto {
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  color: #313131;
+  display: flex;
+  align-items: center;
 }
