--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 body {
   background-color: #313131;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /*--------------------------------------------------------------------------------*/
@@ -88,6 +92,7 @@ body {
   width: 100%;
   max-width: 450px;
   margin: 50px auto;
+  box-sizing: border-box;
 }
 
 .section__titulo {
@@ -134,6 +139,7 @@ body {
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
+  flex-shrink: 0;
 }
 
 .footer__texto {
