--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ body {
   text-align: center;
 }
 
-.projeto {
+.curso {
   background-color: #3b3b3b;
   padding: 8px;
   margin: 16px 0px;
@@ -112,7 +112,7 @@ body {
   border-radius: 3px;
 }
 
-.projeto__titulo {
+.curso__titulo {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -120,13 +120,20 @@ body {
   margin: 8px 0px;
 }
 
-.projeto__descricao {
+.curso__descricao {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #f4f4f4;
   margin: 8px 0;
   text-align: justify;
+}
+
+.curso__link {
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #f4f4f4;
 }
 
 /*--------------------------------------------------------------------------------*/
