--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-family: "Poppins", sans-serif;
+  color: #f4f4f4;
+  --cor-destaque: #87d0a6; /* variavel para cor de fonte em destaque */
 }
 
 /*--------------------------------------------------------------------------------*/
@@ -41,6 +44,7 @@ body {
 
 .icone--texto {
   margin: 0 8px;
+  animation: pulsar 1s infinite alternate;
 }
 
 /*--------------------------------------------------------------------------------*/
@@ -64,21 +68,20 @@ body {
   width: 100%;
   max-width: 200px;
   border-radius: 10%;
+  border: 6px solid #868686;
 }
 
 .perfil__nome {
   font-family: "Damion", cursive;
   font-size: 52px;
   font-weight: 400;
-  color: #87d0a6;
+  color: var(--cor-destaque);
   margin: 16px 0;
 }
 
 .perfil__descricao {
-  font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-weight: 400;
-  color: #f4f4f4;
   margin: 0;
   width: 100%;
   max-width: 500px;
@@ -96,10 +99,9 @@ body {
 }
 
 .section__titulo {
-  font-family: "Poppins", sans-serif;
   font-size: 22px;
   font-weight: 400;
-  color: #87d0a6;
+  color: var(--cor-destaque);
   margin: 16px 0px;
   text-align: center;
 }
@@ -113,24 +115,20 @@ body {
 }
 
 .curso__titulo {
-  font-family: "Poppins", sans-serif;
   font-size: 18px;
   font-weight: 400;
-  color: #87d0a6;
+  color: var(--cor-destaque);
   margin: 8px 0px;
 }
 
 .curso__descricao {
-  font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 400;
-  color: #f4f4f4;
   margin: 8px 0;
   text-align: justify;
 }
 
 .curso__link {
-  font-family: "Poppins", sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #f4f4f4;
@@ -141,7 +139,7 @@ body {
 .footer {
   width: 100%;
   height: 42px;
-  background-color: #87d0a6;
+  background-color: var(--cor-destaque);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -150,10 +148,18 @@ body {
 }
 
 .footer__texto {
-  font-family: "Poppins", sans-serif;
   font-size: 12px;
   font-weight: 700;
   color: #313131;
   display: flex;
   align-items: center;
+}
+
+@keyframes pulsar {
+  0% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1.2);
+  }
 }
